--- a/debian/rules
+++ b/debian/rules
@@ -11,3 +11,8 @@
 
 %:
 	dh  $@
+
+override_dh_auto_configure:
+	test -r /usr/share/misc/config.sub && cp -f /usr/share/misc/config.sub config.sub
+	test -r /usr/share/misc/config.guess && cp -f/usr/share/misc/config.guess config.guess
+	dh_auto_configure
